fix sass style for checkbox spacing

--- a/static/sass/style.scss
+++ b/static/sass/style.scss
@@ -1086,10 +1086,9 @@ input[type="radio"] {
   display: flex;
 }
 
-.code-of-conduct-checkbox{
+input#code-of-conduct-checkbox{
   margin-right: 15px;
 }
-
 
 label[for="code-of-conduct-checkbox"] ~ a {
   color: #007395cc;
